<resources>
    <string name="app_name">CBOEX</string>
    <string name="common_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="main_me">我的</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="sure_delete">确定删除?</string>
    <string name="common_data_empty">暂无数据</string>
    <string name="common_data_error">数据加载失败</string>
    <string name="common_no_network">网络不可用</string>
    <string name="common_reload">重新加载</string>
    <string name="common_sell">卖出</string>
    <string name="common_buy">买入</string>
    <string name="common_again_press_exit_app">再次点击退出应用
    </string>
    <string name="common_sending">%ss</string>
    <string name="common_send_suc">验证码发送成功</string>
    <string name="common_enterapp">立即体验</string>
    <string name="common_jump">前往</string>
    <string name="common_money">金额</string>
    <string name="common_amount">数量</string>
    <string name="common_deal_time">成交时间</string>
    <string name="common_see_after_login">请登录</string>
    <string name="common_price">价格</string>
    <string name="wallet_add_address">添加地址</string>
    <string name="exchange_wallet">资产</string>
    <string name="exchange_statue_hasreport">未成交</string>
    <string name="exchange_statues_some_isok">部分成交</string>
    <string name="exchange_statue_all_ok">已成交</string>
    <string name="exchange_status_some_cancelled">部分撤单</string>
    <string name="exchange_status_cancelled">已撤单</string>
    <string name="tradehis_kong">空</string>
    <string name="tradehis_duo">多</string>
    <string name="common_usable">可用</string>
    <string name="common_freeze">冻结</string>
    <string name="common_valuation">估值</string>
    <string name="common_null">- -</string>
    <string name="common_lengend_spot">现货指数:</string>
    <string name="common_spot">现货</string>
    <string name="common_future">合约</string>
    <string name="common_index">指数</string>
    <string name="common_all">全部</string>
    <string name="common_precesion_unit">位</string>
    <string name="common_precesion">小数</string>
    <string name="common_email_notlegal">无效邮箱地址</string>
    <string name="common_resendcode">重新发送</string>
    <string name="common_hide">****</string>
    <string name="timepicker_start">起</string>
    <string name="timepicker_end">止</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="days">天</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>
    <string name="market_index">指数</string>
    <string name="market_deal_volume">24h成交额:</string>
    <string name="market_deal_sync_self">请先登录</string>
    <string name="market_deal_add_self">添加自选</string>
    <string name="market_card_self">自选</string>
    <string name="market_amount_unit1">数量</string>
    <string name="market_amount_unit2">金额</string>
    <string name="market_deadline">距离交割%s</string>
    <string name="market_favor_success">收藏成功</string>
    <string name="market_favor_fail">收藏失败</string>
    <string name="market_favor_cancel_suc">取消收藏成功</string>
    <string name="market_favor_cancel_fail">取消收藏失败</string>
    <string name="market_k_nomore">没有更多了</string>
    <string name="market_k_max">已经最大了</string>
    <string name="market_k_min">已经最小了</string>
    <string name="market_shou">USDT</string>
    <string name="market_last_price">最新价格</string>
    <string name="market_click_more">点击了解更多信息</string>
    <string name="market_ave_price">算术平均值</string>
    <string name="market_rate_usdt_usd">汇率</string>
    <string name="market_spot_index">现货指数</string>
    <string name="transfer_max_usdt">最多可划转：%s&#8201;USDT</string>
    <string name="transfer_min_usdt">最小划转金额0.00000001&#8201;USDT</string>
    <string name="transfer_bom_account">您的保证金账户仍有持仓，转出 USDT 可能引起爆仓</string>
    <string name="transfer_to_contract">至保证金账户</string>
    <string name="transfer_to_wallet">至我的钱包</string>
    <string name="transfer_from_wallet">从我的钱包</string>
    <string name="transfer_from_contract">从保证金账户</string>
    <string name="contract_margin_avaliable">可用保证金</string>
    <string name="contract_margin_used">已用保证金</string>
    <string name="contract_frozen">委托冻结</string>
    <string name="contract_entitlement">账户权益</string>
    <string name="transfer_see_history">查看记录</string>
    <string name="transfer_continue">继续划转</string>
    <string name="first_bind_phone">绑定手机号</string>
    <string name="first_bind_google">开启谷歌验证</string>
    <string name="first_bind_asset">设置资金密码</string>
    <string name="address_manager">选择地址</string>
    <string name="please_input_currency_address">输入或选择地址</string>
    <string name="please_input_currency_number">请输入提币数量</string>
    <string name="please_input_remark_name">请输入地址备注</string>
    <string name="copy_success">已复制</string>
    <string name="copy_fail">复制失败</string>
    <string name="login_msg1"></string>
    <string name="login_phone_hint">手机号码</string>
    <string name="login_password_hint">密码</string>
    <string name="login_email_hint">邮箱</string>
    <string name="login_broker">登录</string>
    <string name="login_fotget">忘记密码</string>
    <string name="login_finger">指纹密码</string>
    <string name="login_fotget_login">忘记密码?</string>
    <string name="trade_notice_msg">开启推送通知</string>
    <string name="mine_welcome">Welcome to CBOEX</string>
    <string name="mine_login">登录 / 注册</string>
    <string name="mine_total">总资产估值</string>
    <string name="mine_hengxian">---</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="mine_huazhuan">资金划转</string>
    <string name="mine_heyueusdt">保证金账户</string>
    <string name="mine_safe">安全设置</string>
    <string name="mine_identity">身份认证</string>
    <string name="mine_trade">交易设置</string>
    <string name="mine_trade_history">交易记录</string>
    <string name="mine_help">帮助中心</string>
    <string name="mine_language">语言</string>
    <string name="mine_about_broker">关于CBOEX</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_about_broker_msg">版本号V%s</string>
    <string name="mine_about">关于</string>
    <string name="mine_notice_title">通知中心</string>
    <string name="mine_activitys_title">活动中心</string>
    <string name="regist_title">注册</string>
    <string name="regist_emailvcode_hint">请输入6位邮箱验证码</string>
    <string name="regist_phonevcode_hint">请输入6位短信验证码</string>
    <string name="regist_make">确认登录密码</string>
    <string name="regist_fwtk">服务条款</string>
    <string name="regist_mzsm">免责声明</string>
    <string name="regist_ysbh">隐私政策和声明</string>
    <string name="regist_read">我已阅读并同意</string>
    <string name="regist_getcode">发送验证码</string>
    <string name="regist_password">请输入登录密码</string>
    <string name="china">中国</string>
    <string name="password_strength_low">弱</string>
    <string name="password_strength_heigh">强</string>
    <string name="password_strength_low2">中</string>
    <string name="password_strength_heigh2">较强</string>
    <string name="regist_suc">注册成功</string>
    <string name="regist_psw2_notmatch">密码输入不一致</string>
    <string name="regist_psw_lengtherror">密码应为6-32位</string>
    <string name="set_language_cn">中文</string>
    <string name="set_language_en">English</string>
    <string name="set_versionupdate">检测更新</string>
    <string name="resetpsw_account_hint">请输入账号</string>
    <string name="resetpsw_pic_code_hint">图形验证码</string>
    <string name="resetpsw_next">下一步</string>
    <string name="resetpsw_newpsw_hint">设置新密码</string>
    <string name="resetpsw_renewpsw_hint">确认新密码</string>
    <string name="resetpsw_suc">重置密码成功</string>
    <string name="countrycheck_hint">请选择国家或地区</string>
    <string name="safesetting_title">安全设置</string>
    <string name="safesetting_safe">绑定手机</string>
    <string name="safesetting_email">绑定邮箱</string>
    <string name="safesetting_nickname">设置昵称</string>
    <string name="safesetting_google">谷歌验证绑定</string>
    <string name="safesetting_shoushi">手势密码</string>
    <string name="safesetting_login">登录密码</string>
    <string name="safesetting_zijin">资金密码</string>
    <string name="safesetting_zhiwen">指纹密码</string>
    <string name="safesetting_unsetting">未设置</string>
    <string name="safesetting_setted">已设置</string>
    <string name="safesetting_unbind">去绑定</string>
    <string name="safesetting_ident_shenhezhong">认证中</string>
    <string name="safesetting_ident_over">已认证</string>
    <string name="safesetting_ident_fail">认证失败</string>
    <string name="safesetting_password_reset">重置密码</string>
    <string name="safesetting_goauth">未认证</string>
    <string name="safe_bindphone_title">绑定手机号</string>
    <string name="safe_bindnewphone_title">绑定新手机号</string>
    <string name="safe_bindphone_suc">手机绑定成功</string>
    <string name="phone_notinput">请先输入手机号码</string>
    <string name="safe_bindemail_suc">绑定邮箱成功</string>
    <string name="email_notinput">请输入邮箱</string>
    <string name="safe_bindgoogle_title">谷歌验证绑定</string>
    <string name="safe_bindgoogle_warn">请在安全的地方记录此字符串，可以用来找回或解绑谷歌验证</string>
    <string name="safe_bindgoogle_hint">请输入谷歌验证码</string>
    <string name="safe_google_check_download">下载谷歌验证器</string>
    <string name="safe_bindgoogle_copy">复制密钥</string>
    <string name="safe_unbindgoogle_title">解绑谷歌验证</string>
    <string name="safe_bindgoogle_suc">谷歌验证成功</string>
    <string name="safe_unbindgoogle_suc">解绑成功</string>
    <string name="safe_gesture_title">手势密码</string>
    <string name="safe_gestureset_title">设置手势密码</string>
    <string name="safe_gesture_set">绘制手势密码</string>
    <string name="safe_gesture_reset">再次绘制手势密码</string>
    <string name="safe_gesture_suc">手势密码设置成功</string>
    <string name="safe_gesture_diff">与上一次绘制不一致，请重新绘制</string>
    <string name="safe_gesture_short">至少连接4个点，请重新输入</string>
    <string name="safe_gesture_check_error">手势密码错误，还可以尝试 %1d 次</string>
    <string name="safe_gesture_check_error5times">手势密码错误已达5次，请使用其它验证方式</string>
    <string name="safe_capitalset_title">设置资金密码</string>
    <string name="safe_capitalset_msg1">资金密码</string>
    <string name="safe_capitalset_hint">请输入资金密码</string>
    <string name="safe_capitalset_hint2">资金密码确认</string>
    <string name="safe_capitalforget_title">忘记资金密码</string>
    <string name="safe_capitalforget_suc">重置资金密码成功</string>
    <string name="safe_capitalset_suc">设置成功</string>
    <string name="safe_capitalreset_suc">修改资金密码成功</string>
    <string name="safe_capitalreset_title">修改资金密码</string>
    <string name="safe_capitalreset_msg3">新密码确认</string>
    <string name="safe_capitalreset_hint1">旧密码</string>
    <string name="safe_capitalreset_hint2">新密码</string>
    <string name="safe_capitalreset_vcode_hint">请输入验证码</string>
    <string name="safe_capitalreset_change">修改资金密码</string>
    <string name="safe_finger_title">指纹密码</string>
    <string name="safe_finger_device_notsupport">指纹密码不可用\n请使用其它方式验证</string>
    <string name="safe_finger_nofinger">请先录入指纹</string>
    <string name="safe_finger_check_msg">"CBOEX"的触控ID\n通过Home键验证已有指纹</string>
    <string name="safe_finger_check_fail">指纹验证失败</string>
    <string name="safe_finger_device_lock">设备已锁定</string>
    <string name="identity_title">身份认证</string>
    <string name="identity_camera">拍照</string>
    <string name="identity_gallery">相册</string>
    <string name="wallet_contact_account">保证金账户</string>
    <string name="wallet_contact_my_money_account">我的钱包</string>
    <string name="wallet_all_transfer">全部划转</string>
    <string name="wallet_comfirm_tranfer">确定划转</string>
    <string name="commom_ems_code">短信验证码</string>
    <string name="google_code">谷歌验证码</string>
    <string name="mine_logout2">退出</string>
    <string name="tradelever_title">杠杆设置</string>
    <string name="setting_language">语言版本</string>
    <string name="setting_theme">夜间模式</string>
    <string name="trans_max">最多可划转：</string>
</resources>