<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.graphics.drawable.Drawable" />

        <variable
            name="view"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/outside"
            style="@style/vertical_weight1"
            android:alpha="0.2"
            android:background="@color/black" />

        <LinearLayout
            style="@style/horizontal_fill"
            android:background="?attr/bg_color"
            android:orientation="vertical"
            android:paddingBottom="27dp"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:id="@+id/forget_fund_code_layout"
                style="@style/horizontal_fill"
                android:gravity="center">

                <TextView
                    style="@style/horizontal_weight1"
                    android:text="@string/safe_capitalset_msg1"
                    android:textColor="?attr/font_color"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/forget_fund_code"
                    style="@style/wrap_style"
                    android:text="@string/login_fotget_login"
                    android:textColor="#FF103A8C"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/fund_code_layout"
                style="@style/horizontal_fill"
                android:gravity="center">


                <com.fota.android.widget.btbwidget.ClearEdittext
                    android:id="@+id/fund_code"
                    style="@style/horizontal_weight1"
                    android:hint="@string/safe_capitalset_hint"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/cb_eye_psw"
                    style="@style/eyecheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="3dp"
                    android:checked="false" />

            </LinearLayout>


            <View
                android:id="@+id/fund_code_line"
                style="@style/horizontal_line" />

            <TextView
                android:id="@+id/fund_code_error"
                style="@style/horizontal_fill"
                android:gravity="right"
                android:textColor="#FFE52855"
                android:textSize="13sp"
                tools:text="--" />

            <TextView
                android:id="@+id/ems_tip"
                style="@style/wrap_style"
                android:layout_marginTop="14dp"
                android:text="@string/commom_ems_code"
                android:textColor="?attr/font_color"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/ems_layout"
                style="@style/horizontal_fill"
                android:layout_marginTop="14dp">

                <com.fota.android.widget.btbwidget.FotaEditText
                    android:id="@+id/ems_code"
                    style="@style/horizontal_weight1"
                    android:hint="@string/safe_capitalreset_vcode_hint"
                    android:maxLength="6"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <com.fota.android.widget.btbwidget.VCodeButton
                    android:id="@+id/send_ems_code"
                    style="@style/wrap_style"
                    android:onClick="@{view.onClick}"
                    android:text="@string/regist_getcode"
                    android:textColor="?attr/font_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:id="@+id/ems_line"
                style="@style/horizontal_line" />

            <TextView
                android:id="@+id/ems_error"
                style="@style/horizontal_fill"
                android:gravity="right"
                android:text=""
                android:textColor="#FFE52855"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/google_tip"
                style="@style/wrap_style"
                android:layout_marginTop="14dp"
                android:text="@string/google_code"
                android:textColor="?attr/font_color"
                android:textSize="17sp" />

            <com.fota.android.widget.btbwidget.FotaEditText
                android:id="@+id/google_edit"
                style="@style/horizontal_fill"
                android:hint="@string/safe_bindgoogle_hint"
                android:maxLength="6"
                android:textSize="15sp" />

            <View
                android:id="@+id/google_line"
                style="@style/horizontal_line"
                android:visibility="gone" />

            <TextView
                android:id="@+id/google_error"
                style="@style/horizontal_fill"
                android:gravity="right"
                android:text=""
                android:textColor="#FFE52855"
                android:textSize="13sp" />

            <com.fota.android.widget.btbwidget.FotaButton
                android:id="@+id/bt_sure"
                style="@style/horizontal_fill"
                android:layout_height="@dimen/normal_button_height"
                android:layout_marginTop="45dp"
                android:onClick="@{view.onClick}"
                android:text="@string/sure"
                android:textColor="?attr/font_color3"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</layout>