<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#99000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/bg_color"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:gravity="center"
                android:text="@string/identity_gallery"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/line_color" />

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:gravity="center"
                android:text="@string/identity_camera"
                android:textColor="?attr/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_piccheck_cancel"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>